[tool.poetry]
name = "suss-labguide"
version = "0.0.1"
description = "Package that powers interactive, autogradable labguides"
authors = ["Bryan Lim <bryanlimyt@suss.edu.sg>, Jane Tan <janetanjy@suss.edu.sg>"]
license = "MIT"
readme = "README.md"
include = [
    "lab0/**/*",
    "scripts/*"
]

[tool.poetry.dependencies]
python = ">=3.8"
typer = "^0.9.0"

[tool.poetry.scripts]
labguide = "scripts.labguide:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
