[tool.poetry]
name = "suss-labguide"
version = "0.0.1"
description = "Package that powers interactive, autogradable labguides"
authors = ["Bryan Lim <bryanlimyt@suss.edu.sg>, Jane Tan <janetanjy@suss.edu.sg>", "Brandon Voon <brandonvoonys@suss.edu.sg>"]
credits ["Bryan Chew <@bchewzy>", "Joey Tan <@jeezusplays>"]
license = "MIT"
readme = "README.md"
include = [
    "lab0/**/*",
    "scripts/*",
    ".plugins/*",
]

[tool.poetry.dependencies]
python = ">=3.8"
typer = "^0.9.0"
suss = { git = "https://github.com/suss-vli/suss.git" }
learntools = { git = "https://github.com/suss-vli/learntools.git" }

[tool.poetry.scripts]
labguide = "scripts.labguide:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
