[tool.poetry]
name = "cli"
version = "0.1.0"
description = "a simple cli helper for everyday python projects"
authors = ["ytbryan <ytbryan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
